Fixed issues: feed textarea colors, invite checkboxes animation on IE, Unreg popup on feed replies

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -265,7 +265,7 @@ md-input-container .md-input,
 .form-group.form-md-line-input .form-control {
     border-color: @buttonColorBlue;
 
-    &:focus, &:active {
+    &:active {
         color: @textColorBlue;
     }
 }
