--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.css
@@ -134,22 +134,6 @@
   overflow: auto;
   min-height: 80px;
 }
-.feed .comment .user-comment .new-comment-border textarea,
-.feed .add-comment .user-comment .new-comment-border textarea {
-  min-height: 50px;
-  background: none;
-  width: 100%;
-  border: none;
-  padding: 14px 0 10px 10px;
-}
-.feed .comment .user-comment .new-comment-border textarea.ng-not-empty,
-.feed .add-comment .user-comment .new-comment-border textarea.ng-not-empty {
-  color: #212325;
-}
-.feed .comment .user-comment .new-comment-border textarea:focus,
-.feed .add-comment .user-comment .new-comment-border textarea:focus {
-  color: #212325;
-}
 .feed .comment .user-comment .new-comment-border .file-upload-area,
 .feed .add-comment .user-comment .new-comment-border .file-upload-area {
   padding: 0;
@@ -304,6 +288,22 @@
 .feed .reply > .content-text {
   margin-bottom: 0;
 }
+.feed .new-comment-border textarea,
+.feed .reply-wrapper textarea {
+  min-height: 50px;
+  background: none;
+  width: 100%;
+  border: none;
+  padding: 14px 0 10px 10px;
+}
+.feed .new-comment-border textarea.ng-not-empty,
+.feed .reply-wrapper textarea.ng-not-empty {
+  color: #212325;
+}
+.feed .new-comment-border textarea:focus,
+.feed .reply-wrapper textarea:focus {
+  color: #212325;
+}
 .feed .actions svg,
 .feed .reply-actions svg {
   width: 22px;
@@ -323,16 +323,6 @@
   line-height: normal;
   margin-right: 8px;
   z-index: 1;
-}
-.feed .actions .post-comment svg,
-.feed .reply-actions .post-comment svg {
-  width: 22px;
-  height: 22px;
-}
-.feed .actions {
-  color: #4190b9;
-}
-.feed .actions .post-comment {
   margin-right: 14px;
   -moz-transform: scaleX(1) /*rtl:scaleX(-1)*/;
   -webkit-transform: scaleX(1) /*rtl:scaleX(-1)*/;
@@ -343,6 +333,14 @@
   /*IE*/
   filter: none /*rtl:fliph*/;
   /*IE*/
+}
+.feed .actions .post-comment svg,
+.feed .reply-actions .post-comment svg {
+  width: 22px;
+  height: 22px;
+}
+.feed .actions {
+  color: #4190b9;
 }
 .feed .actions .share-section {
   padding: 0;
@@ -443,7 +441,6 @@
   padding: 20px 10px 20px 20px;
   border: none;
   min-height: 120px;
-  color: #212325;
 }
 .feed .add-reply-wrapper .add-reply .reply-actions {
   padding: 8px 5px;
